--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title>ImmoHub</title>
+    <title>ImmoBee</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
